--- a/src/app/work/work.scss
+++ b/src/app/work/work.scss
@@ -2,12 +2,18 @@
 .header {
     background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)),
         url('../../assets/images/WorkBackground.png');
-        height: 75vh;
+        min-height: 75vh;
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
         background-repeat: no-repeat;
         font-size: var(font-size-normal);
+}
+
+@media(max-width: 768px) { /* Adjust breakpoint as needed */
+    .header {
+        background-attachment: scroll;
+    }
 }
 
 .header__text-box {
